# mkdocs-tacc

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  DEPLOYING.md  DEVELOP.md  DEVELOPING.md  MANIFEST.in  PUBLISHING.md  README.md  TESTING.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py
.github/: pull_request_description.md  pull_request_template.md
clients/basic-example/: index.html
clients/ds-user-guide-example/: index.html
clients/tacc-docs-example/: index.html
configure/: index.html
css/tacc-theme/: core-docs.css  tacc-docs.css
customize/: index.html
docs/: configure.md  customize.md  deploy.md  develop.md  extensions.md  index.md  test-ext-link-icon.md  test.md
docs/assets/: extra.css
docs/clients/: basic-example.md  ds-user-guide-example.md  ds-user-guide.md  example.md  tacc-docs-example.md  tacc-docs.md
extensions/: index.html
js/: tacc-theme.js
mkdocs_tacc/tacc_readthedocs/: main.html  mkdocs_theme.yml
mkdocs_tacc/tacc_readthedocs/css/: rtd-theme.css  tacc-theme.css
search/: search_index.json
tacc-readthedocs/js/: tacc-theme.js
tacc-readthedocs/js/tacc-theme/: autoScrollNav.js
tacc_readthedocs/: README.md  main.html  mkdocs_theme.yml
tacc_readthedocs/css/: tacc-theme.css
tacc_readthedocs/css/tacc-theme/: core-docs.css  readthedocs-reskin.css  tacc-docs.css
tacc_readthedocs/js/: tacc-theme.js  tacc-theme.mjs
tacc_readthedocs/js/tacc-theme/: addIconToExternalLinks.js  addPageId.js  autoScrollNav.js  setTargetForExternalLinks.mjs
test/: index.html
(+3 files in other folders)
